finalizacao da segunda tela, falta editar a imagem de fundo

--- a/web/dev/candidata.html
+++ b/web/dev/candidata.html
@@ -9,15 +9,17 @@
 </head>
 <body>
     <div id="header">
-        <i class="fas fa-bars"></i>
-        <h1>Logo Hedy</h1>
-        <a href="candidata.html">Quem Somos</a>
-        <a href="http://">Login</a>
+        <img id="icon_bars" src="../images/fa-bars.png" alt="fa-bars">
+        <img src="../images/logo-colorida.jpg" alt="Logo Colorida">
+        <div class="button_links">
+            <button id="button_header" onclick="window.location.href = 'candidata.html'">Quem Somos</button>
+            <button id="button_header" onclick="window.location.href = 'candidata.html'">Login</button>
+        </div>
     </div>
 
     <div class="thumb_area">
-        <p>Queremos conhecer você melhor. Você poderá complementar suas informações fazendo o upload do seu currículo e adicionar links de portfólios no final do nosso questionário.</p>
-        <button onclick="window.location.href = 'cadastro_candidata.html'">Vamos Começar</button>
+        <p id="text">Queremos conhecer você melhor. Você poderá complementar suas informações fazendo o upload do seu currículo e adicionar links de portfólios no final do nosso questionário.</p>
+        <button id="button" onclick="window.location.href = 'cadastro_candidata.html'">Vamos Começar</button>
     </div>
     
 </body>
